Data Ingestion Completed

--- a/notebook/credit-card-defaulter-EDA.ipynb
+++ b/notebook/credit-card-defaulter-EDA.ipynb
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1165,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.        , -0.63157895,  0.        , ..., -0.40352411,\n",
+       "        -0.3969304 , -0.38637388],\n",
+       "       [-0.99993333, -0.10526316,  0.        , ..., -0.13450804,\n",
+       "        -0.3969304 ,  0.12879129],\n",
+       "       [-0.99986666, -0.26315789,  0.        , ..., -0.13450804,\n",
+       "        -0.13231013,  0.90153906],\n",
+       "       ...,\n",
+       "       [ 0.99986666, -0.57894737, -1.        , ...,  0.7263434 ,\n",
+       "         0.13231013,  0.41213214],\n",
+       "       [ 0.99993333, -0.31578947, -1.        , ...,  0.11460085,\n",
+       "        13.61841757,  0.07830511],\n",
+       "       [ 1.        , -0.47368421, -1.        , ..., -0.13450804,\n",
+       "        -0.13231013, -0.12879129]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scale_robust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1193,12 +1239,12 @@
       "- COST: 0.\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Accuracy: 0.8180\n",
-      "- F1 score: 0.4673\n",
-      "- Precision: 0.6499\n",
-      "- Recall: 0.3648\n",
-      "- Roc Auc Score: 0.6549\n",
-      "- COST: 419580.\n",
+      "- Accuracy: 0.8135\n",
+      "- F1 score: 0.4523\n",
+      "- Precision: 0.6329\n",
+      "- Recall: 0.3519\n",
+      "- Roc Auc Score: 0.6473\n",
+      "- COST: 428180.\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1212,12 +1258,12 @@
       "- COST: 0.\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Accuracy: 0.7227\n",
-      "- F1 score: 0.3882\n",
-      "- Precision: 0.3753\n",
-      "- Recall: 0.4021\n",
-      "- Roc Auc Score: 0.6073\n",
-      "- COST: 401290.\n",
+      "- Accuracy: 0.7187\n",
+      "- F1 score: 0.3830\n",
+      "- Precision: 0.3682\n",
+      "- Recall: 0.3991\n",
+      "- Roc Auc Score: 0.6036\n",
+      "- COST: 403490.\n",
       "===================================\n",
       "\n",
       "\n",
